# samples

./: LICENSE
devcontainer/: README.md
elm/: elm.js  elm.json  index.html  memo.md
elm/src/: Button.elm  Form.elm  Main.elm  TextField.elm
hugo/: gen-post.sh  hugo.toml  package.json
hugo/content/me/: _index.md
hugo/content/posts/: 20231215074651.md  20231215114142.md
md-to-pdf/: .editorconfig  .markdownlint.json  .puppeteer-config.json  Dockerfile  README.md  article.md  package-lock.json  package.json
md-to-pdf/.devcontainer/: devcontainer.json
md-to-pdf/styles/: github-markdown.min.css  style.css
md-to-pdf/sudoers.d/: node
mkdocs/: Pipfile  README.md  mkdocs.yml
mkdocs/docs/: index.md  tags.md
mkdocs/docs/stylesheets/: extra.css
mkdocs/docs/test1/: index.md
mkdocs/docs/test2/: aaa.md  index.md
review/: memo.md
sqlc-gen-python/: .gitignore  README.md  docker-compose.yaml  pyproject.toml
sqlc-gen-python/config/: servers.json
sqlc-gen-python/postgres/init/: 01-schema.sql  02-insert.sql
sqlc-gen-python/src/: main.py
sqlc-gen-python/src/sql/: authors.sql  books.sql  schema.sql  sqlc.yaml
sqlc-gen-python/src/sql/code/: authors.py  books.py  models.py
vitepress/: README.md  pnpm-lock.yaml
vitepress/docs/: index.md
vue.js/introduction/: README.md  app1.js  app2.js  app3.js  app4.js  app5.js  app6.js  app7.js  index1.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  styles2.css  styles3.css  styles4.css  styles5.css  styles6.css  styles7.css
whisper/: README.md
(+2 files in other folders)
