[project]
name = "sqlc-gen-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tnmt", email = "tanimoto.masashi@protonmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "ruff>=0.4.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlc_gen_python"]
